[tool.poetry]
name = "mbox-tool"
version = "0.1.0"
description = "tool for editing mbox files"
authors = ["Andrew Alderfer <drew@drewalderfer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
notebook = "^7.0.6"
pandas = "^2.1.4"

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
    "./.ipynb_checkpoints",
]
venvPath = "/home/drew/.cache/pypoetry/virtualenvs"
venv = "mbox-tool-3OBqFDZL-py3.11"

reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
